--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e:watch": "vitest --config ./vitest.config.e2e.mjs"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -34,6 +34,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "update": "^0.4.2",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.3.1"
   },
@@ -46,6 +47,7 @@
     "@swc/core": "^1.7.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
